<resources>
    <string name="app_name">Zodiak Kim</string>
    <string name="nama_zodiak">Nama Zodiak</string>
    <string name="detail_zodiak"> Detail Zodiak</string>
    <string name="todo">TODO</string>
    <string name="linetexttt">__________________________</string>
    <string name="linetextpanjang">___________________________________________________________________</string>
    <string name="sifat_capricorn">Orang yang lahir pada tanggal antara 21 Desember sampai 19 Januari
        berada di bawah pengaruh zodiak Capricorn, yang berlambang kambing. Orang yang berzodiak
        Capricorn mengutamakan kesuksesan, status, posisi, reputasi, loyalitas, konsentrasi, pemecahan
        masalah, bertanggung jawab, memperlihatkan kebijaksanaan, dan keseriusan belajar melalui pengalaman.
        Namun, ada kalanya orang berzodiak Capricorn cenderung bersikap memandang buruk (pesimis), selalu
        terpaksa, membebani, takut menghadapi hambatan, memperlihatkan batasan, kurang simpati,
        terlalu khawatir, dan pemikiran sempit.</string>
    <string name="pasangan_capricorn">Dalam pergaulan, orang yang berkelahiran Capricorn agak posesif (mengekang).
        Dalam pergaulan yang membuahkan cinta, Capricorn sering mencemburui kekasihnya tanpa alasan yang jelas.
        Sifat seperti ini menyebabkan perilakunya sulit untuk dimengerti dan terkadang seperti kekanak-kanakan.
        Untuk mengatasi masalah ini, seseorang yang berkepribadian dewasa, ramah dan penuh pengertian adalah
        pendamping ideal bagi Capricorn.</string>
    <string name="karir_capricorn">Capricorn memang bercita – cita mencari kekuasaan dalam karir sehingga
        Anda harus siap bekerja dengan tekun. Capricorn ditakdirkan menjadi manajer dan administrator yang
        baik. Diibaratkan berpasangan dengan Leo, kalau Leo sangat baik menjadi raja atau ratu, Capricorn
        sangat cocok menjadi perdana menteri. Keberhasilan Capricorn dalam usaha mengatasi masalah dan
        risiko akhirnya membuat Capricorn berhasil mendapatkan manfaat dari segi keuangan.</string>
    <string name="keluarga_capricorn">Rumah kelahiran Capricorn biasanya rapi dan tersusun. Cara
        Capricorn mengatur rumah tangga sama dengan cara mengurus karirnya. Capricorn bijak mengelola
        anak – anak dan serius dengan aturan yang tepat dipatuhi mereka. Pastinya Capricorn bangga menjadi orang tua.</string>
    <string name="sifat_aquarius">Orang yang lahir pada tanggal antara 20 Januari sampai 18 Febuari
        berada di bawah pengaruh zodiak Aquarius, yang berlambang gelombang (alur air). Orang Aquarius
        tertarik dengan petualangan, berjiwa kemanusiaan, ingin tahu, ada semangat berontak, bersikap
        spontan, progesif, persahabatan, hak asasi, kelompok, dan mampu memberi manfaat untuk sekitar.
        Namun, ada kalanya Aquarius menghadapi gangguan, tak bisa diharapkan, suka membantah, memberontak,
        tak lengkap, perilaku salah, tak konsisten, perangai radikal, kurang metode, dan mendatangkan bencana.</string>
    <string name="pasangan_aquarius">Teman atau kekasih yang paling cocok bagi Aquarius adalah Aries
        dan Gemini. Aries merupakan pendamping yang cocok bagi Aquarius. Semangat Aries yang tinggi
        dalam menambah ilmu merupakan hal menarik perhatian bagi Aquarius. Aries sebaliknya menyenangi
        sikap Aquarius yang terbuka. Gemini juga memiliki persamaan dengan Aquarius. Kedua – duanya
        memandang daya intelektual bukan rupa dan tubuh semata – mata. Keinginan Aquarius berburu
        karir turut disenangi oleh Gemini.</string>
    <string name="karir_aquarius">Kelahiran Aquarius ini biasanya tekun bekerja dan ingin orang lain
        sama tekun dalam bekerja sama. Lantaran itu, Aquarius menyukai karir yang mengikat dirinya
        dengan dasar filosofis, kekreatifan dan berlandaskan metode serta teknik yang tersusun.
        Aquarius cepat menguasai karir dan berupaya memberikan kontribusi ide bagi peningkatan diri
        dan organisasi, dan gemar membantu teman sekerja. Walau bagaimana pun, untuk berhasil ke
        tujuan karir yang tertinggi, Aquarius perlu mengembangkan kepekaan emosi, perasaan mendalam
        dan kesabaran yang tinggi.</string>
    <string name="keluarga_aquarius">Dalam keluarga dan rumah tangga, kelahiran Aquarius mudah berubah,
        yaitu tidak stabil. Namun, Aquarius tetap menginginkan sebuah rumah yang baik untuk memperlakukan
        keluarga dan teman. Demi keharmonisan rumah tangga dan keluarga, Aquarius harus memasukkan
        fitur-fitur stabilitas dan kaulitas. Selain mengutamakan daya intelektual, Aquarius sebenarnya
        harus meresapkan cinta ke dalam rumah dan keluarga.</string>
    <string name="sifat_pisces">Orang yang lahir antara tanggal 19 Febuari sampai 20 Maret dikatakan
        bernaung di bawah zodiak Pisces, yang berlambang ikan. Pisces mengutamakan cinta universal,
        bersifat manja, selalu mencari ilham, memperlihatkan kepercayaan, ada kesepahaman, berjiwa puitis,
        menyukai musik, beragama, bersifat setia, mampu menghibur diri, mengutamakan kerohanian, dan tidak
        mudah mengaku kalah. Namun, ada kalanya Pisces merasa bingung, bersalah, mudah mengaku kalah,
        mudah kecewa, khawatir, risau, terlibat dalam penipuan, ketagihan, dan mudah menurut kemauan hati.</string>
    <string name="pasangan_pisces">Orang berzodiak Pisces suka pada pujian dan mengharapkan ungkapan
        cinta dari kekasih. Justru itu, seseorang yang berkeperibadian kuat adalah pendamping yang tepat
        untuk Pisces. Zodiak Taurus yang bersifat pendiam tetapi mantap, sesuai untuk Pisces. Sikap
        Taurus yang dewasa, bersikap melindungi, akan mampu menenteramkan hati Pisces yang sensitif ini.
        Selain itu, Cancer yang matang dan gemar melindungi, juga diidamkan Pisces.</string>
    <string name="karir_pisces">Kelahiran Pisces gemar menerima tantangan dan suka dihargai. Karir yang
        banyak tantangan juga berarti Pisces harus banyak belajar, merantau, dan menimba pengalaman
        di mana – mana. Sikap penyayang membuat karir kelahiran Pisces sebagai dokter, perawat atau guru.
        Walaupun karir Pisces memang menjamin pendapatan yang cukup lumayan tetapi uang bukanlah segala – galanya.
        Pisces cenderung menjadi pemurah jika memiliki kelebihan uang untuk diri dan keluarga.</string>
    <string name="keluarga_pisces">Dalam kehidupan keluarga dan rumah tangga kelahiran Pisces ini harus
        melakukan lebih banyak komunikasi lisan. Pisces tidak suka dikekang, sebaliknya ingin merdeka.
        Pertukaran ide dan pendapat yang tidak emosional dan tenang, memanfaatkan orang lain. Pisces
        menggemari lingkungan rumah tangga yang mampu membuahkan kepentingan intelektual dan pikiran.</string>
    <string name="sifat_taurus">Orang yang lahir pada tanggal antara 21 April sampai 20 Mei dikatakan
        bernaung di bawah zodiak Taurus, yang berlambang Lembu Jantan. Dengan demikian, Taurus mengutamakan
        kekayaan, ketinggian spiritual, kaut daya rasa, loyalitas, gemar berpelesiran, kesuburan, terlalu
        praktis, murah rezeki dan ketabahan. Walau bagaimana pun, ada kalanya Taurus bersikap terlalu
        kebendaan, terlalu mengekang, keras hati, suka menurut rasa hati dan buntu pikiran.</string>
    <string name="pasangan_taurus">Cancer dan Virgo adalah pasangan yang ideal bagi Taurus. Cancer
        memang pendamping tepat bagi Taurus. Keperibadian Cancer yang matang dan tidak berubah – ubah
        sesuai dengan cita rasa Taurus. Lagi pula, Cancer mempunyai pandangan yang konservatif (kolot)
        seperti Taurus. Sikap Virgo yang tenang dan agak kolot juga sesuai bagi Taurus. Sebaliknya,
        Taurus harus berhati – hati ketika dipasangkan dengan Aries atau Gemini.</string>
    <string name="karir_taurus">Dalam hal pekerjaan, Taurus sangat rajin, tekun, cermat, cerewet,
        kreatif dan mementingkan ‘deadline’. Semua ini menguntungkan setiap majikan atau organisasi.
        Namun, Taurus sangat inginkan bosnya serajin dan sekreatif seperti dirinya.</string>
    <string name="keluarga_taurus">Rumah dan keluarga merupakan dua ‘harta’ (aset) dan tanggung jawab
        adalah hal yang sangat penting bagi Taurus. Orang kelahiran Taurus memang sayangkan anak – anak.
        Untuk perlengkapan rumah, orang Taurus gemar membeli furnitur dan perhiasan untuk kenyamanan.
        Rumah bukan untuk tempat tinggal semata, tetapi tempat untuk kreativitas dan hiburan.</string>
    <string name="sifat_aries">Orang yang lahir pada tanggal antara 21 Maret sampai 20 April dikatakan
        bernaung di bawah zodiak Aries, yang berlambang Biri-biri jantan. Dengan demikian, Aries seorang
        yang berani, yakin, inisiatif, mengutamakan tindakan, ada pertahanan diri, ada rasa merintis,
        ada daya juang, dan pencinta / memperjuangkan nasib.</string>
    <string name="pasangan_aries">Aries punya daya pesona yang tinggi. Dalam pergaulan, Aries kelihatan
        lincah, pintar, berkeperibadian kuat dan teman bual yang mengasyikan. Zodiak Taurus, Gemini dan
        Aquarius adalah kekasih yang tepat bagi Aries. Taurus yang matang adalah pendamping yang tepat
        bagi Aries. Dengan sikapnya yang tenang; Taurus yang berlambang Lembu Jantan, mampu menundukkan
        Biri – biri Jantan (Aries) yang tidak mau duduk diam. Gemini juga cocok menjadi kekasih yang ideal
        bagi Aries. Kebetulan Gemini dan Aries mempunyai banyak persamaan, yaitu aktif , cerdas dan bijak.</string>
    <string name="karir_aries">Kelahiran berlambang Aries ini selalu bercita – cita merintis karir
        sendiri dari hanya bekerja dengan majikan. Walau bagaimana pun, Aries jarang menyelesaikan
        proyek sampai ke penghasilan yang memuaskan! Namun, pada jangka pendek, tidak ada yang mampu
        mengatasi daya rintis Aries. Lantaran itu, Aries mampu berhasil ke puncak karir.</string>
    <string name="sifat_gemini">Orang yang lahir pada tanggal antara 21 Mei sampai 20 Juni dikatakan
        bernaung di bawah zodiak Gemini, yang berlambang Saudara Kembar. Dengan demikian, Gemini terampil
        berkomunikasi, suka bepergian, serbaguna, cerdas, ada kekuatan berbicara, mampu menulis, kedekatan
        pada sanak saudara dan tetangga, gemar migrasi, dan bersikap terbuka. Namun, ada kalanya Gemini
        bersikap hanya suka sekejap saja, bersikap keanak-anakan, gugup, suka bermuka dua, berbicara
        kosong, tak lengkap dan suka berpura-pura.</string>
    <string name="pasangan_gemini">Pendamping yang cocok untuk Gemini adalah seseorang yang cerdas dan
        memahami cita rasa Gemini yang selalu berubah – ubah. Zodiak Aries dan Taurus adalah pasangan
        yang tepat buat Anda. Gemini memiliki daya pesona yang dapat meluluhkan hati seseorang,
        terutama Aries. Ketangkasan, kecerdasan dan kelincahan Gemini adalah merupakan fitur – fitur
        yang disenangi oleh Aries. Sebaliknya, Aries sendiri juga adalah pendamping yang setia
        dan penuh perhatian buat Gemini.</string>
    <string name="karir_gemini">Gemini harus sadar memiliki keterampilan berkomunikasi yang tinggi.
        Dengan keterampilan ini, Gemini berupaya memindahkan hasrat dan tujuan dalam diri ke orang
        lain secara logis. Metode transfer ini membuat orang Gemini sangat menonjol dalam karir
        yang melibatkan penulisan, pendidikan, perjualan dan jurnalisme. Banyak contoh yang melibatkan
        orang Gemini, terkenal sebagai penyair, pelukis, musisi dan ahli sufi</string>
    <string name="keluarga_gemini">Dalam urusan rumah, orang Gemini terlihat agak cerewet. Gemini
        cenderung menginginkan semua anggota keluarga mengikuti aturan yang ditetapkan. Jika ini
        tidak dipatuhi, Gemini mudah mengeluh dan mengkritik.</string>
</resources>