<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/detail_aquarius"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/Rlleo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="10dp">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="230dp"
                android:background="@drawable/line_list"
                android:scaleType="centerCrop"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp" />

            <ImageView
                android:id="@+id/Iv_leo"
                android:layout_width="190dp"
                android:layout_height="230dp"
                android:padding="5dp"
                android:src="@drawable/aquarius"
                android:scaleType="centerCrop"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp" />

            <TextView
                android:id="@+id/tv_lambangleo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_toEndOf="@+id/Iv_leo"
                android:textStyle="bold"
                tools:text="Lambang" />

            <TextView
                android:id="@+id/tv_singa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/Iv_leo"
                android:layout_below="@id/tv_lambangleo"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                tools:text="Pembawa Air" />

            <TextView
                android:id="@+id/linetext"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/linetexttt"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_below="@id/tv_lambangleo"
                android:layout_toEndOf="@id/Iv_leo"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_elemen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/tv_singa"
                android:layout_toEndOf="@+id/Iv_leo"
                android:textStyle="bold"
                tools:text="Elemen" />

            <TextView
                android:id="@+id/tv_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/Iv_leo"
                android:layout_below="@id/tv_elemen"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                tools:text="Udara" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/tv_elemen"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/linetexttt"
                android:layout_toEndOf="@id/Iv_leo"/>

            <TextView
                android:id="@+id/tv_nomorleo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/tv_api"
                android:layout_toEndOf="@id/Iv_leo"
                android:textStyle="bold"
                tools:text="Tanggal Lahir"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@id/Iv_leo"
                android:layout_below="@id/tv_nomorleo"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                tools:text="20 Januari-18 Februari"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/sifatleo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Sifat"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/stringsifat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sifat_aquarius"
                android:textSize="16sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/sifatleo"/>

            <TextView
                android:layout_below="@id/stringsifat"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:textSize="13sp"
                android:text="@string/linetextpanjang"/>

            <TextView
                android:id="@+id/pasanganleo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stringsifat"
                tools:text="Pasangan"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/stringpasangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pasangan_aquarius"
                android:layout_marginTop="3dp"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/pasanganleo"/>

            <TextView
                android:layout_below="@id/stringpasangan"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/linetextpanjang"/>

            <TextView
                android:id="@+id/keuanganleo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stringpasangan"
                tools:text="Karir Dan Keuangan"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/stringkeuangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/karir_aquarius"
                android:layout_marginTop="3dp"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/keuanganleo"/>

            <TextView
                android:layout_below="@id/stringkeuangan"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/linetextpanjang"/>

            <TextView
                android:id="@+id/keluargaleo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stringkeuangan"
                tools:text="Keluarga"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/stringkeluarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keluarga_aquarius"
                android:layout_marginTop="3dp"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/keluargaleo"/>


        </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>