<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/detail_gemini"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/Rlgemini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="230dp"
                android:background="@drawable/line_list"
                android:scaleType="centerCrop"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp" />

            <ImageView
                android:id="@+id/Iv_gemini"
                android:layout_width="190dp"
                android:layout_height="230dp"
                android:padding="5dp"
                android:src="@drawable/gemini"
                android:scaleType="centerCrop"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp" />

            <TextView
                android:id="@+id/tv_lambanggemini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:layout_toEndOf="@+id/Iv_gemini"
                android:textStyle="bold"
                tools:text="Lambang" />

            <TextView
                android:id="@+id/tv_singa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/Iv_gemini"
                android:layout_below="@id/tv_lambanggemini"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                tools:text="Anak Kembar" />

            <TextView
                android:id="@+id/linetext"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/linetexttt"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_below="@id/tv_lambanggemini"
                android:layout_toEndOf="@id/Iv_gemini"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_elemen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/tv_singa"
                android:layout_toEndOf="@+id/Iv_gemini"
                android:textStyle="bold"
                tools:text="Elemen" />

            <TextView
                android:id="@+id/tv_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/Iv_gemini"
                android:layout_below="@id/tv_elemen"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                tools:text="udara" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/tv_elemen"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/linetexttt"
                android:layout_toEndOf="@id/Iv_gemini"/>

            <TextView
                android:id="@+id/tv_nomorgemini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/tv_api"
                android:layout_toEndOf="@id/Iv_gemini"
                android:textStyle="bold"
                tools:text="Tanggal Lahir"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@id/Iv_gemini"
                android:layout_below="@id/tv_nomorgemini"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                tools:text="21 Mei - 20 Juni"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/kenalidirimu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kenali Dirimu Dengan Melihat Zodiakmu"/>

            <TextView
                android:layout_below="@id/kenalidirimu"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/linetextpanjang"/>

            <TextView
                android:id="@+id/sifatgemini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                tools:text="Sifat"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/stringsifat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sifat_gemini"
                android:textSize="16sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/sifatgemini"/>

            <TextView
                android:layout_below="@id/stringsifat"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/linetextpanjang"/>

            <TextView
                android:id="@+id/pasangangemini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stringsifat"
                tools:text="Pasangan"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/stringpasangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pasangan_gemini"
                android:layout_marginTop="3dp"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/pasangangemini"/>

            <TextView
                android:layout_below="@id/stringpasangan"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/linetextpanjang"/>

            <TextView
                android:id="@+id/keuangangemini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stringpasangan"
                tools:text="Karir Dan Keuangan"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/stringkeuangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/karir_gemini"
                android:layout_marginTop="3dp"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/keuangangemini"/>

            <TextView
                android:layout_below="@id/stringkeuangan"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/linetextpanjang"/>

            <TextView
                android:id="@+id/keluargagemini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stringkeuangan"
                tools:text="Keluarga"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/stringkeluarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keluarga_gemini"
                android:layout_marginTop="3dp"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:layout_below="@id/keluargagemini"/>


        </RelativeLayout>

    </LinearLayout>
</ScrollView>